--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10649,18 +10649,22 @@ body {
   background-color: #F6F6F6;
   color: #8D8C8A;
   font-family: "Nunito", sans-serif;
+  overflow: overlay;
 }
 
 .navbar {
   background-color: #52D6F4;
-  line-height: 2;
+  line-height: 2.3;
   box-shadow: 3px -5px 5px 6px #999;
 }
 
 .navbar-dark .navbar-nav .nav-link,
-.navbar-dark .navbar-nav .nav-link:hover {
+.navbar-dark .navbar-nav .nav-link:hover,
+.profile-link,
+.profile-link:hover {
   color: #FFFFFF;
   font-weight: bold;
+  text-decoration: none;
 }
 
 a,
@@ -10798,5 +10802,15 @@ textarea {
 
 .post-action {
   cursor: pointer;
+}
+
+.big-gallery img {
+  width: 100%;
+  height: 250px;
+}
+
+.small-gallery img {
+  width: 100%;
+  height: 75px;
 }
 
