--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,9 +9,8 @@
 
 html, body {
   background-color: #F6F6F6;
-  color: #8D8C8A;
+  color: #404040;
   font-family: 'Nunito', sans-serif;
-  overflow: overlay;
 }
 
 .navbar {
@@ -51,7 +50,7 @@ a, a:hover {
 }
 
 a.date {
-  color: #8D8C8A;
+  color: #4d4d4c;
 }
 
 .submit-button, .submit-button:hover {
@@ -67,7 +66,7 @@ textarea {
 .action {
   border-radius: 2rem;
   background-color: #F6F6F6;
-  color: #8D8C8A;
+  color: #4d4d4c;
   cursor: pointer
 }
 
@@ -78,12 +77,12 @@ textarea {
 
 .post-content, .comment-content {
   white-space: pre-wrap;
-  color: #363538;
+  color: #000000;
 }
 
 .border-bottom-only {
   border: 0;
-  border-bottom: 1px solid #8D8C8A;
+  border-bottom: 1px solid #4d4d4c;
   border-radius: 0;
 }
 
@@ -96,7 +95,7 @@ textarea {
   font-size: .7rem;
 }
 
-#file-input, #edit-file-input {
+#file-input, #edit-file-input, #profile-image-input {
   display: none;
 }
 
