--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10714,7 +10714,7 @@ textarea {
 
 .comment {
   font-size: 0.85rem;
-  background-color: #F6F6F6;
+  background-color: #eff3f5;
 }
 
 .post-content,
@@ -10808,5 +10808,10 @@ textarea {
 .small-gallery img {
   width: 100%;
   height: 75px;
+}
+
+.activity-panel {
+  max-height: 300px;
+  overflow-y: overlay;
 }
 
