--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -72,7 +72,7 @@ textarea {
 
 .comment {
   font-size: .85rem;
-  background-color: #F6F6F6;
+  background-color: #eff3f5;
 }
 
 .post-content, .comment-content {
@@ -162,4 +162,9 @@ textarea {
 .small-gallery img {
   width: 100%;
   height: 75px; 
+}
+
+.activity-panel {
+  max-height: 300px;
+  overflow-y: overlay;
 }
