--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,7 +9,7 @@
 
 html, body {
   background-color: #e6ecf0;
-  color: #15171A;
+  color: #374149;
   font-family: 'Nunito', sans-serif;
 }
 
@@ -56,6 +56,7 @@ a.date {
 .submit-button, .submit-button:hover {
   background-color: #657786;
   color: #FFFFFF;
+  border-radius: 0;
 }
 
 textarea {
@@ -167,4 +168,8 @@ textarea {
 .activity-panel {
   max-height: 300px;
   overflow-y: overlay;
+}
+
+.form-control {
+  border-color: #bbbbbb;
 }
